--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
         <button class="itemnames itn1">Chicken</button>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas quam
-          fuga architecto?
+          fuga architecto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat laudantium, error veritatis quo incidunt accusamus enim assumenda vitae similique eum!
         </p>
       </div>
       <div class="items" id="item2">
         <button class="itemnames itn2">Beef</button>
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-          Exercitationem voluptatum cumque cum!
+          Exercitationem voluptatum cumque cum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat laudantium, error veritatis quo incidunt accusamus enim assumenda vitae similique eum!
         </p>
       </div>
       <div class="items" id="item3">
         <button class="itemnames itn3">Sushi</button>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-          facilis ducimus nam.
+          facilis ducimus nam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat laudantium, error veritatis quo incidunt accusamus enim assumenda vitae similique eum!
         </p>
       </div>
     </div>
